Remove commons lang